[package]
name = "forester-rs"
description = "Workflow framework based on the behavior trees"
authors = ["BorisZhguchev <zhguchev@hotmail.com>"]
homepage = "https://github.com/besok/forester"
repository = "https://github.com/besok/forester"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
parsit = "0.2.0"
graphviz-rust = "0.6.2"
logos = "0.13.0"
itertools = "0.11.0"
strum = "0.25.0"
strum_macros = "0.25.1"
log = "0.4"
env_logger = "0.10.0"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = { version = "1.0.99" }
serde_yaml = "0.9.22"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tracing = "0.1"
axum = "0.6.16"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.9"
hyper = "0.14.27"
chrono = "0.4.26"
quick-xml = "0.30.0"

#rustdds = "0.8.5"

[dev-dependencies]
wiremock = "0.5.19"
forester-http = "0.1.0"