[package]
name = "f-tree"
description = "the cli app to execute the commands from forester."
authors = ["BorisZhguchev <zhguchev@hotmail.com>"]
version = "0.1.9"
edition = "2021"
license-file="LICENSE"
homepage = "https://github.com/besok/forester"
repository = "https://github.com/besok/forester"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
forester-rs = "0.2.2
log = "0.4"
env_logger = "0.10.0"