[project]
name = "forester_http"
version = "0.0.7"
authors = [
  { name="Boris Zhguchev", email="zhguchev@hotmail.com" },
]
description = "the lib provides an access to api for the forester instance using http protocol"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/besok/forester"

[build-system]
requires = ["setuptools>=61.0","requests>=2.26.0"]
build-backend = "setuptools.build_meta"