[package]
name = "forester-http"
description = "the lib provides an access to api for the forester instance using http protocol"
authors = ["BorisZhguchev <zhguchev@hotmail.com>"]
version = "0.1.0"
edition = "2021"
license-file="LICENSE"
homepage = "https://github.com/besok/forester"
repository = "https://github.com/besok/forester"

[dependencies]
serde_json = { version = "1.0.99" }
serde = { version = "1.0.166", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }