[package]
name = "forester-language-server"
version = "0.1.0"
edition = "2021"


[dependencies]
chumsky = "0.9.2"
env_logger = "0.10.0"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.19.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
im-rc = "15.0.0"


